--- a/prj.conf
+++ b/prj.conf
@@ -1,12 +1,11 @@
 
-
 # Configure logger
 CONFIG_LOG=y
 CONFIG_USE_SEGGER_RTT=n
 CONFIG_LOG_BACKEND_UART=y
 CONFIG_LOG_DEFAULT_LEVEL=3
 
-# Configure other BS that probably isn't needed 
+# Configure some other BS that probably isn't needed 
 CONFIG_STDOUT_CONSOLE=y
 CONFIG_PRINTK=y
 
@@ -16,6 +15,10 @@ CONFIG_DK_LIBRARY=y
 
 # Configure PWM
 CONFIG_PWM=y
+
+# Configure SPI
+CONFIG_SPI=y
+CONFIG_SPI_ASYNC=y
 
 # Configure Bluetooth
 CONFIG_BT=y
