--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ target_sources(app PRIVATE src/main.c)
 target_sources(app PRIVATE
     src/remote_service/remote.c
     src/libs/ultrasonic_hc-sr04.c
+    src/helpers.c
 )
 
 zephyr_library_include_directories(src/remote_service)
