--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
     "nrf-connect.toolchain.path": "${nrf-connect.toolchain:2.1.2}",
-    "python.analysis.typeCheckingMode": "off"
+    "python.analysis.typeCheckingMode": "off",
+    "files.associations": {
+        "kernel.h": "c"
+    }
 }
