--- a/prj.conf
+++ b/prj.conf
@@ -25,6 +25,7 @@ CONFIG_BT_DEVICE_NAME="Benjamin the Robot"
 CONFIG_BT_DEVICE_APPEARANCE=0
 CONFIG_BT_MAX_CONN=1
 CONFIG_ASSERT=y
+CONFIG_BT_NUS=y
 
 # Display
 CONFIG_LV_Z_MEM_POOL_NUMBER_BLOCKS=8
